src/app/result-visualization/result-visualization.component.css
.center-div
{
  margin: 0 auto;
  width: 1050px;
  /*height: 100px;*/
  /*background-color: #ccc;*/
  /*border-radius: 3px;*/
}

#settings td {
  display: inline-block;
  vertical-align: top;
  text-align: center;
  padding:0 25px 0 25px;
}

/* (Range) Slider CSS */
/* The (range) slider itself */
.slider {
  -webkit-appearance: none;  /* Override default CSS styles */
  /*appearance: none;*/
  width: 200px;
  height: 15px;
  border-radius: 5px;
  background: #d3d3d3; /* Grey background */
  outline: none; /* Remove outline */
  opacity: 0.7; /* Set transparency (for mouse-over effects on hover) */
  -webkit-transition: .2s; /* 0.2 seconds transition on hover */
  transition: opacity .2s;
}

/* Mouse-over effects */
.slider:hover {
  opacity: 1; /* Fully shown on mouse-over */
}

/* The slider handle (use -webkit- (Chrome, Opera, Safari, Edge) and -moz- (Firefox) to override default look) */
.slider::-webkit-slider-thumb {
  -webkit-appearance: none; /* Override default look */
  /*appearance: none;*/
  width: 25px; /* Set a specific slider handle width */
  height: 25px;
  border-radius: 50%;
  background: #2196F3;
  cursor: pointer; /* Cursor on hover */
}

.slider::-moz-range-thumb {
  width: 25px; /* Set a specific slider handle width */
  height: 25px;
  border-radius: 50%;
  background: #2196F3;
  cursor: pointer; /* Cursor on hover */
}

/* (Toggle) Slider CSS */
/* The switch - the box around the slider */
.switch {
  position: relative;
  display: inline-block;
  width: 60px;
  height: 34px;
}

/* Hide default HTML checkbox */
.switch input {display:none;}

/* The slider */
.toggleslider {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: #ccc;
  -webkit-transition: .4s;
  transition: .4s;
}

.toggleslider:before {
  position: absolute;
  content: "";
  height: 26px;
  width: 26px;
  left: 4px;
  bottom: 4px;
  background-color: white;
  -webkit-transition: .4s;
  transition: .4s;
}

input:checked + .toggleslider {
  background-color: #2196F3;
}

input:focus + .toggleslider {
  box-shadow: 0 0 1px #2196F3;
}

input:checked + .toggleslider:before {
  -webkit-transform: translateX(26px);
  -ms-transform: translateX(26px);
  transform: translateX(26px);
}

/* Rounded sliders */
.toggleslider.round {
  border-radius: 34px;
}

.toggleslider.round:before {
  border-radius: 50%;
}

canvas {
  margin: auto;
  display: block;
}

/* Tooltip for showing lottery in headline */
/* Tooltip container */
.headlinetooltip {
  position: relative;
  display: inline-block;
  /*border-bottom: 1px dotted black; !* If you want dots under the hoverable text *!*/
}

/* Tooltip text */
.headlinetooltip .headlinetooltiptext {
  visibility: hidden;
  font-size: 12px;
  width: 100px;
  background-color: #555;
  color: #fff;
  text-align: center;
  padding: 5px 0;
  border-radius: 6px;

  /* Position the tooltip text */
  position: absolute;
  z-index: 1;
  bottom: 125%;
  left: 50%;
  margin-left: -60px;

  /* Fade in tooltip */
  opacity: 0;
  transition: opacity 0.3s;
}

/* Tooltip arrow */
.headlinetooltip .headlinetooltiptext::after {
  content: "";
  position: absolute;
  top: 100%;
  left: 50%;
  margin-left: -5px;
  border-width: 5px;
  border-style: solid;
  border-color: #555 transparent transparent transparent;
}

/* Show the tooltip text when you mouse over the tooltip container */
.headlinetooltip:hover .headlinetooltiptext {
  visibility: visible;
  opacity: 1;
}

.angular-with-newlines {
  white-space: pre;
}

.CellWithComment{
  position:relative;
}

.CellComment{
  width: 200px;
  text-align:center;
  display:none;
  position:absolute;
  z-index:100;
  background-color: #555;
  border-radius: 6px;
  border: 1px solid transparent;
  border-top-color: #555;
  padding:3px;
  color: #fff;
  top:20px;
  left:20px;
}

.CellWithComment:hover span.CellComment{
  display:block;
}

